# cleaner-server

./: .gitignore  pyproject.toml
cleaner/: main.py
cleaner/controllers/: images.py  pages.py  websockets.py
cleaner/services/: connection_manager.py  image_processor.py  ml_model.py
cleaner/static/scripts/: index.js
cleaner/static/styles/: index.css
cleaner/static/templates/: index.html
washer_server/: main.py
washer_server/controllers/: images.py  pages.py  websockets.py
washer_server/services/: connection_manager.py  image_processor.py  ml_model.py
washer_server/static/scripts/: index.js
washer_server/static/styles/: index.css
washer_server/static/templates/: index.html
