[tool.poetry]
name = "cleaner"
version = "0.1.0"
description = ""
authors = ["Mikhail Drozdov <deathlokmike@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pillow = "^10.2.0"
websockets = "^12.0"
jinja2 = "^3.1.4"
numpy = "^1.26.4"
ultralytics = "^8.2.27"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
